--- a/css/map.css
+++ b/css/map.css
@@ -266,7 +266,7 @@ table.tableStyle.topBold  {border-top-width:1px; border-top-style:solid; border-
 /*************************************/
 /* layout */
 .mapArea {position:absolute; z-index:0; top:50px; bottom:0; left:60px; right:0;  padding-top:0px; overflow:auto; }
-#map     {width:100%; height:100%; margin:0 0; padding:0; display:;}
+#map     {width:100%; height:100%; margin:0 0; padding:0; display:none;}
 .gnbArea {position:absolute; z-index:2; top:0; left:0; width:100%; height:50px;  border-bottom:1px solid rgba(255,255,255,0.2); box-shadow:0 2px 2px rgba(0,0,0,0.05); background:#333336;}
 .lnbArea {position:absolute; z-index:4; top:50px; left:0; bottom:0; width:60px; border-bottom:1px solid #aaa; background:#333336; box-shadow:1px 0px 2px rgba(0,0,0,0.2);}
 .lnbCont {position:absolute; z-index:3; top:50px; left:60px; bottom:0; display:none;}
@@ -398,7 +398,7 @@ body	 {min-height:600px;}
 /* GNB  Area */
 .gnbArea {clear:both; text-align:right;}
 .gnbArea h1{display:inline-block; height:100%; width:auto; margin:0 30px 0 7px; vertical-align:middle; float:left; border:0px solid #fff;}
-.gnbArea h1 .logo {display:block; width:150px; height:100%; background:url('../img/gnb_logo.png') no-repeat; display:;}
+.gnbArea h1 .logo {display:block; width:150px; height:100%; background:url('../img/gnb_logo.png') no-repeat; display:none;}
 
 .gnbArea .dvNoticeTicker {display:inline-block; display:none; width:400px; overflow:hidden; position:relative; vertical-align:middle;}
 .gnbArea .dvNoticeTicker:before {display:inline-block; content:''; position:absolute; left:0; top:0; width:30px; height:30px;
@@ -728,7 +728,8 @@ body	 {min-height:600px;}
 
 .tabulator {position:relative; background-color:transparent !important; overflow:hidden; font-size:13px; text-align:left; }
 .tabulator .tabulator-header {width:100%; border-bottom:0px solid #999; background-color:transparent; color:#333;}
-.tabulator .tabulator-header .tabulator-col {border-left:0px solid #ddd; border-right:0; border-top:1px solid #888; border-bottom:1px solid #888; background-color:#f5f6f7;}
+.tabulator .tabulator-header .tabulator-col {border-left:0px solid #ddd; border-right:0px solid rgba(0,0,0,0.08); border-top:1px solid #888; border-bottom:1px solid #888; background-color:#f5f6f7;}
+.tabulator .tabulator-header .tabulator-col:last-child {border-right:0;}
 .tabulator .tabulator-header .tabulator-col.tabulator-moving {border:1px solid #999;  background: #e6e6e6;}
 
 .tabulator .tabulator-header .tabulator-col .tabulator-col-content {padding:8px 8px;}
@@ -737,7 +738,9 @@ body	 {min-height:600px;}
 
 .tabulator .tabulator-header .tabulator-col .tabulator-col-content .tabulator-arrow {top:11px; right:5px; border-left:4px solid transparent;  border-right:4px solid transparent;  border-bottom:5px solid #bbb;}
 
-.tabulator .tabulator-header .tabulator-col.tabulator-col-group .tabulator-col-group-cols {border-top:1px solid #888;}
+.tabulator .tabulator-header .tabulator-col.tabulator-col-group .tabulator-col-group-cols {border-top:0px solid #888;}
+.tabulator .tabulator-header .tabulator-col.tabulator-col-group .tabulator-col-group-cols .tabulator-col {border-bottom:0;}
+.tabulator .tabulator-header .tabulator-col.tabulator-col-group .tabulator-col-group-cols .tabulator-col:last-child {border-right:0;}
 .tabulator .tabulator-header .tabulator-col.ui-sortable-helper {background-color:#e6e6e6 !important;  border:1px solid #888;}
 
 .tabulator .tabulator-header .tabulator-col .tabulator-header-filter {margin-top:4px;}
@@ -861,6 +864,17 @@ input.searchInp {display:block; width:100%; border:2px solid #ddd; height:50px; 
 .dvTooja.tabWrap .tab-pane .unit:nth-of-type(1) > .unit_tit:nth-of-type(1) {margin-top:-5px;}
 .dvTooja.tabWrap .tab-pane .unit {margin-bottom:10px;}
 
+.dvToojaDetail {}
+
+/*************************************/
+/* LNB  lnbCont  - dvGyeonggongSearch 경,공매 검색 */
+.dvGyeonggongSearch {padding:20px 20px;}
+.dvGyeonggongSearch table td .rdchBox {padding-right:15px;}
+.dvGyeonggongSearch table td .rdchBox + .rdchBox {margin:0;}
+.dvGyeonggongSearch table td .rdchBox label {font-weight:normal;}
+
+.dvGyeonggongSearch.tabWrap .tab-pane .unit:nth-of-type(1) > .unit_tit:nth-of-type(1) {margin-top:-5px;}
+.dvGyeonggongSearch.tabWrap .tab-pane .unit {margin-bottom:10px;}
 
 /*************************************/
 /* LNB  lnbCont  -  mulgunList 물건 보기  */
@@ -879,8 +893,6 @@ input.searchInp {display:block; width:100%; border:2px solid #ddd; height:50px; 
 .heatmapList {border:0px solid #000; overflow:; padding:20px;}
 .heatmapList li {padding:4px 0;}
 .heatmapList li:hover .rdchBox {animation:ani_down 0.2s ease-out 0s 1 alternate;}
-
-
 
 
 /*************************************/
@@ -910,3 +922,58 @@ input.searchInp {display:block; width:100%; border:2px solid #ddd; height:50px; 
 /*************************************/
 /* dvCateMaemul // 매물등록 */
 .dvCateMaemul {}
+
+
+/*************************************/
+/*************************************/
+/*************************************/
+/* 공지사항 */
+.dvNoticeList {overflow:auto; border-bottom:1px solid #aaa;}
+.dvNoticePaging {clear:both;}
+
+.tableFixedHead {padding-right:14px;}
+.tableFixedBody {overflow-x:hidden; overflow-y:auto;}
+.tableFixedBody table.tableStyle {border-width:0 0 0 0;}
+
+.dvNoticeList table tbody tr:hover {background:#f5f5f5;}
+.dvNoticeList table tbody td a:hover {animation:ani_down 0.2s ease-out 0s 1 alternate; font-weight:500;}
+
+ul.paginglist {display:inline-block; overflow:hidden; margin:10px 0px; vertical-align:middle; text-align:center; border-left:none; }
+ul.paginglist:before,
+ul.paginglist:after {display:block; content:''; clear:both;}
+ul.paginglist li {display:inline-block; float:left; padding:0 0px; border:none; border-left:none;}
+ul.paginglist li a {display:block; border:none; line-height:28px; height:28px; min-width:28px; padding:0 2px; font-weight:500;}
+ul.paginglist li:hover {background:#eee;}
+ul.paginglist li.active {background-color:#fff; border:1px solid #0073d6;}
+ul.paginglist li.active a,
+ul.paginglist li.active a:hover {color:#0073d6;}
+ul.paginglist li a i {display:inline-block; height:26px; font-size:13px; line-height:26px; vertical-align:middle;}
+ul.paginglist a,
+ul.paginglist a:hover {color:#222;}
+
+.tableFilter {display:inline-block;}
+.tableFilter:after {display:block; content:''; height:0; line-height:0; clear:both;}
+.tableFilter select.inp,
+.tableFilter input.inp{height:28px; line-height:28px;}
+.tableFilter .tableFilterBtn {display:inline-block; width:28px; height:28px; line-height:28px; color:#fff; background:#318de7; text-align:center; vertical-align:middle;}
+.tableFilter .tableFilterBtn:before {
+	font-family: 'AMB-iconfont' !important; speak:none; font-style:normal; font-weight:normal; font-variant:normal; text-transform:none; line-height:1;
+	-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale;
+	display:block; width:100%; height:100%; font-size:14px; line-height:inherit;
+	content:'\e919';
+}
+
+.fileIcon {display:inline-block; border:0px solid #fff; background:; width:20px; height:20px; line-height:20px; text-align:center; vertical-align:middle; margin:-2px 2px;}
+.fileIcon:before {
+	font-family: 'AMB-iconfont' !important; speak:none; font-style:normal; font-weight:normal; font-variant:normal; text-transform:none; line-height:1;
+	-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale;
+	display:block; width:100%; height:100%; color:#000; font-size:15px; line-height:20px;
+	content:'\e957';
+}
+.dvNoticeList table tbody td a.fileIcon:hover {animation:ani_down 0.0s ease-out 0s 1 alternate;}
+.dvNoticeList table tbody td a.fileIcon:hover:before {animation:ani_down 0.2s ease-out 0s 1 alternate;}
+
+.mapLink {display:inline-block; position:relative; height:18px; line-height:18px; }
+.mapLink:after {display:inline-block; content:''; width:20px; height:18px; background:url('../img/marker_search.png') no-repeat center center; background-size:auto 18px; text-align:center; vertical-align:middle; margin:;}
+.mapLink:hover:after {animation:ani_down 0.2s ease-out 0s 1 alternate;}
+
