--- a/css/map.css
+++ b/css/map.css
@@ -249,6 +249,9 @@ table.tableStyle.gridStyle tbody tr:hover td {font-weight:normal;}
 /* table topBold */
 table.tableStyle.topBold  {border-top-width:1px; border-top-style:solid; border-top-color:#888;}
 
+/* */
+.subTh {color:#e73131; font-size:.5em;}
+
 
 ::-webkit-input-placeholder {color:#aaa;}
 :-moz-placeholder           {color:#aaa; opacity:1;}
@@ -392,6 +395,18 @@ body	 {min-height:600px;}
 	content:'\e915'; position:absolute; top:0; left:0;
 }
 .mapInnerBox.type2 .mibfooter button:hover {animation:ani_down2 0.2s ease-out 0s 1 alternate; color:#2a7cdd;}
+
+
+/* context-menu // 지도 우클릭 컨텐츠 */
+.context-menu {width:180px; position:absolute; z-index:1; display:none; border:0px;}
+.context-menu .context-menu-head {height:30px; color:#fff; display:none;}
+.context-menu .context-menu-body {background:#333; color:#e1e1e1; position:relative; margin-left:5px; margin-top:-15px; border-radius:4px;}
+.context-menu .context-menu-body:after {display:block; content:''; position:absolute; z-index:1; top:14px; left:-5px; width:0px; height:0px; border-top:6px solid transparent; border-bottom:6px solid transparent; border-right:5px solid #333;}
+.context-btn {width:100%; text-align:left; padding:12px 15px 12px 22px; border-bottom:1px solid #000; position:relative; font-size:12px;}
+.context-btn:before {display:inline-block; content:''; width:2px; height:2px; border-radius:50%; background:#fff; position:absolute; left:13px; top:20px; opacity:0.6;}
+.context-btn .text {display:inline-block;}
+.context-btn:hover {background:rgba(0,0,0,0.5); color:#fff;}
+.context-btn:hover .text {animation:ani_down2 0.2s ease-out 0s 1 alternate;font-weight:500;}
 
 
 /*************************************/
