--- a/css/map.css
+++ b/css/map.css
@@ -397,8 +397,20 @@ body	 {min-height:600px;}
 .mapInnerBox.type2 .mibfooter button:hover {animation:ani_down2 0.2s ease-out 0s 1 alternate; color:#2a7cdd;}
 
 
+/* onlyText 스타일 */
+.mapInnerBox.onlyText {width:auto; max-width:400px;}
+.mapInnerBox.onlyText .mibBody {padding:15px 43px 15px 15px; color:#e9e9e9; position:relative; border-radius:4px; line-height:1.6em;}
+.mapInnerBox.onlyText .mibBody .closeBtn {overflow:hidden;position:absolute; top:13px; right:10px; display:block; width:25px; height:25px; text-align:center;}
+.mapInnerBox.onlyText .mibBody .closeBtn:after{
+	font-family: 'AMB-iconfont' !important; speak:none; font-style:normal; font-weight:normal; font-variant:normal; text-transform:none; line-height:1;
+	-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale;
+	display:inline-block; width:25px; height:25px; color:; font-size:16px; line-height:25px; 
+	content:'\e90e'; font-weight:bold; opacity:0.8;
+}
+.mapInnerBox.onlyText .mibBody .closeBtn:hover:after {animation:ani_down2 0.2s ease-out 0s 1 alternate; color:#fff; opacity:1;}
+
 /* context-menu // 지도 우클릭 컨텐츠 */
-.context-menu {width:180px; position:absolute; z-index:1; display:none; border:0px;}
+.context-menu {width:180px; position:absolute; z-index:200; display:none; border:0px; animation:ani_down2 0.2s ease-out 0s 1 alternate;}
 .context-menu .context-menu-head {height:30px; color:#fff; display:none;}
 .context-menu .context-menu-body {background:#333; color:#e1e1e1; position:relative; margin-left:5px; margin-top:-15px; border-radius:4px;}
 .context-menu .context-menu-body:after {display:block; content:''; position:absolute; z-index:1; top:14px; left:-5px; width:0px; height:0px; border-top:6px solid transparent; border-bottom:6px solid transparent; border-right:5px solid #333;}
