--- a/css/map.css
+++ b/css/map.css
@@ -193,7 +193,7 @@ input[type='checkbox']:checked + label.labelCh:before {background-position:0 top
 table {table-layout:fixed; width:100%; text-align:center;}
 table.tableStyle tr {height:34px;}
 table.tableStyle th,
-table.tableStyle td {padding:8px 10px; line-height:1.4em;}
+table.tableStyle td {padding:8px 10px; line-height:1.4em; word-break:keep-all; word-wrap:break-word;}
 table.tableStyle th {color:#333;}
 
 /* 라인 스타일 */
@@ -245,9 +245,12 @@ table.tableStyle.borderStyle tbody tr:hover td {font-weight:normal;}
 table.tableStyle.gridStyle thead th {background:#f5f6f7; text-align:center; border-top:1px solid #888;}
 table.tableStyle.gridStyle tbody td {text-align:;}
 table.tableStyle.gridStyle tbody tr:hover td {font-weight:normal;}
+table.tableStyle.gridStyle tbody th {background:#f5f6f7; border-right:1px solid #ccc;}
 
 /* table topBold */
 table.tableStyle.topBold  {border-top-width:1px; border-top-style:solid; border-top-color:#888;}
+
+table.tableStyle td img {max-width:100%;}
 
 /* */
 .subTh {color:#e73131; font-size:.5em;}
@@ -449,6 +452,10 @@ body	 {min-height:600px;}
 .gnbArea .dvEtc .unit.logout:after       {background-position:-30px -180px;}
 .gnbArea .dvEtc .unit.logout {display:none;}
 
+.gnbArea .dvEtc .unit.fullScreen {}
+.gnbArea .dvEtc .unit.fullScreen:after     {background-position:-30px -210px;}
+.gnbArea .dvEtc .unit.fullScreen.off:after {background-position:-30px -240px;}
+
 .gnbArea .dvEtc .unit:hover:after {animation:ani_down2 0.2s ease-out 0s 1 alternate;}
 
 .gnbArea .dvEtc .boxUnit {display:inline-block; text-align:center; position:relative;}
@@ -561,12 +568,15 @@ body	 {min-height:600px;}
 
 .modal {background:rgba(0,0,0,0.5); text-align:center; padding:0 !important; width:100%; height:100%; display:none;}
 .modal.in {animation:ani_down2 0.2s ease-out 0s 1 alternate;}
+/*
 .modal.in .modal-dialog {z-index:1041;
 	-webkit-transform: translate(0, -50%);
     -ms-transform: translate(0, -50%);
     -o-transform: translate(0, -50%);
     transform: translate(0, -50%);
 }
+*/
+.modal.in .modal-dialog {z-index:1041; }
 .modal .modal-dialog {display:block; text-align:left;  vertical-align:middle; margin:0 auto; max-width:96%; top:50%;}
 
 .modal .modal-content {display:block; border-radius:2px; margin:0 auto;}
@@ -587,6 +597,18 @@ body	 {min-height:600px;}
 /* modal content common */
 .rowBox {clear:both;}
 .rowBox:after {display:block; content:''; height:0; line-height:0; padding:0; margin:0; clear:both;}
+
+/* grid column */
+.g_column       {display:inline-block; float:left; padding-right:20px;}
+.w_1_1          {width:100%;}
+.w_2_1          {width:50%;}
+.w_3_1          {width:33.33%; *width:33.3%; }
+.w_3_2          {width:66.66%; *width:66.6%; }
+.w_4_1          {width:25%;  }
+.w_4_2          {width:50%;  }
+.w_4_3          {width:75%;  }
+.g_column:last-child {padding-right:0px;}
+.g_column:last-of-type {padding-right:0px;}
 
 .unit {overflow:; display:block;}
 .unit_tit {display:block; clear:both; margin-bottom:2px; min-height:30px;}
@@ -611,6 +633,8 @@ body	 {min-height:600px;}
 
 .sTit.noBullt {padding-left:0;}
 .sTit.noBullt:before {display:none;}
+
+.unit_tit .etcText {display:inline-block; font-size:13px; font-weight:normal; padding:0 0 0 10px; position:relative; margin-top:8px; margin-left:5px;}
 
 .btnArea {display:block; margin:10px 0;}
 
@@ -670,6 +694,32 @@ body	 {min-height:600px;}
 .slideShow:hover {animation:fadeIn 0.2s ease-out 0s 1 alternate;}
 
 .slideShow-cont {display:none;}
+
+/*************************************/
+/* touchSlider // image Gallery */
+.touchSliderWrap {position:relative; width:100%; padding:5px 20px;}
+.touchSlider { width:100%; height:120px; min-height:120px; background:; position:relative; overflow:hidden; }
+.touchSlider ul {width:99999px; height:100%;  position:absolute; top:0; left:0; overflow:hidden; }
+.touchSlider ul li {float:left; width:100%; height:100%; font-size:13px;  text-align:center; padding:0 10px; overflow:hidden; position:relative;}
+.touchSlider ul li:after {display:inline-block; content:''; width:0; height:100%; vertical-align:middle;}
+.touchSlider ul li a {}
+.touchSlider ul li img {min-height:120px; max-height:100%; max-width:100%; vertical-align:middle;}
+
+.touchSliderWrap .tsBtnArea {text-align:center;}
+.touchSliderWrap .tsBtnArea button {display:block; width:25px; height:30px; background:rgba(0,0,0,0.1); font-size:16px; font-weight:bold; z-index:1; position:absolute; top:50%; margin-top:-15px;}
+.touchSliderWrap .tsBtnArea button:after {
+	font-family: 'AMB-iconfont' !important; speak:none; font-style:normal; font-weight:normal; font-variant:normal; text-transform:none; line-height:1;
+	-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale;
+	display:inline-block; width:100%; height:100%; line-height:30px; text-align:center; font-size:20px; vertical-align:middle; font-weight:bold;	
+}
+.touchSliderWrap .tsBtnArea button.btn_prev {left:0;}
+.touchSliderWrap .tsBtnArea button.btn_next {right:0;}
+.touchSliderWrap .tsBtnArea button.btn_prev:after {content:'\e901';}
+.touchSliderWrap .tsBtnArea button.btn_next:after {content:'\e900';}
+
+.touchSliderWrap .paging {text-align:center; overflow:hidden;}
+.touchSliderWrap .paging .btn_page {display:inline-block; width:10px; height:10px; margin:3px; font-size:0px; line-height:0; text-indent:-9999px; background:#3399CC; }
+.touchSliderWrap .paging .btn_page.on {background:#ff0000;}
 
 /*************************************/
 /* ajax-upload-dragdrop */
@@ -949,6 +999,20 @@ input.searchInp {display:block; width:100%; border:2px solid #ddd; height:50px; 
 /*************************************/
 /* dvCateMaemul // 매물등록 */
 .dvCateMaemul {}
+
+
+/*************************************/
+/*************************************/
+/* dvGyeongmaeDetail // 경.공매 상세보기 */
+.dvGyeongmaeDetail {}
+.imageViewBox {overflow:hidden; min-width:400px; height:; text-align:center;}
+.imageViewBox img {max-width:100%; max-height:600px;}
+
+/* 인근매각물건사례 탭컨텐츠*/
+.dvMaegagmulgeon {}
+.dvMaegagmulgeon.tabWrap .nav-tabs .tabLink {height:32px;}
+.dvMaegagmulgeon.tabWrap .nav-tabs .tabLink > a, 
+.dvMaegagmulgeon.tabWrap .nav-tabs .tabLink > button {padding:0px 25px 2px;}
 
 
 /*************************************/
